

public class AnimationStrings
{
    internal static string isMoving = "IsMoving";
    internal static string isGrounded = "IsGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string attackTrigger = "Attack";
    internal static string canMove = "canMove";
    internal static string jumpTrigger = "Jump";
}
